--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "ignite>=1.1.0",
     "jupyter>=1.1.1",
     "numpy>=2.2.3",
+    "pytorch-ignite>=0.5.1",
     "torch>=2.6.0",
     "tqdm>=4.67.1",
 ]
