--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
           
       - name: Build Docs
         run: |
-          sphinx-build -b html ./docs public
+          sphinx-build docs _build
           touch public/.nojekyll
           
       - name: Deploy 🚀
