--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,12 +31,12 @@ jobs:
           
       - name: Build Docs
         run: |
-          sphinx-build docs _build
+          sphinx-build -b html ./docs public
+          touch public/.nojekyll
           
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
-          publish_dir: _build/
-          force_orphan: true
+          FOLDER: public
